--- a/public/dinner.html
+++ b/public/dinner.html
@@ -89,10 +89,10 @@
     <div id="root">
 <!-- Top Navigation Bar -->
 <header class="sticky top-0 z-50 w-full border-b border-solid border-[#e7ecf4] dark:border-[#1e293b] bg-white/80 dark:bg-background-dark/80 backdrop-blur-md">
-<div class="mx-auto flex max-w-[1200px] items-center justify-between px-6 py-3">
+<div class="mx-auto flex max-w-[1200px] items-center justify-between px-3 py-3 md:px-6">
 <div class="flex items-center gap-8">
 <div class="flex items-center gap-3">
-<div class="flex h-8 w-8 items-center justify-center rounded-lg bg-primary">
+<div class="flex h-8 w-8 items-center justify-center rounded-lg bg-primary shrink-0">
 <span class="material-symbols-outlined text-[20px] text-white">restaurant_menu</span>
 </div>
 <h2 class="text-lg font-bold tracking-tight dark:text-white">오늘 저녁 뭐 먹지?</h2>
@@ -105,7 +105,7 @@
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html">미국 금융 시장 심리</a>
 </div>
 </div>
-<div class="flex items-center gap-4">
+<div class="flex flex-wrap items-center justify-end gap-2 md:gap-4">
 <button id="menu-button" class="flex md:hidden h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
 <span class="material-symbols-outlined">menu</span>
 </button>
