--- a/public/gemini_adv.html
+++ b/public/gemini_adv.html
@@ -7,7 +7,7 @@
             </p>
         </div>
 
-        <div class="px-0 py-8 space-y-12 md:px-8">
+        <div class="px-0 py-8 space-y-12 md:px-4">
             <section>
                 <h2 class="text-xl font-bold mb-6 text-slate-900 border-l-4 border-slate-900 pl-4 dark:text-white">현 시장 심리 스캔: 폭주하는 기관차와 사라진 브레이크</h2>
                 <div class="overflow-x-auto">
@@ -28,7 +28,7 @@
                                     <span class="md:hidden text-red-600 font-bold">100.00</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-red-600 font-bold text-center">100.00</td>
-                                <td class="md:table-cell p-0 py-1 md:p-5 font-semibold text-red-600">
+                                <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-red-600">
                                     <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>극심한 탐욕
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
@@ -42,7 +42,7 @@
                                     <span class="md:hidden text-red-600 font-bold">91.54</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-red-600 font-bold text-center">91.54</td>
-                                <td class="md:table-cell p-0 py-1 md:p-5 font-semibold text-red-600">
+                                <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-red-600">
                                     <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>극심한 탐욕
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
@@ -56,7 +56,7 @@
                                     <span class="md:hidden text-blue-600 font-bold">60.00</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-blue-600 font-bold text-center">60.00</td>
-                                <td class="md:table-cell p-0 py-1 md:p-5 font-semibold text-blue-600">
+                                <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-blue-600">
                                     <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>공포/소외
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
@@ -70,7 +70,7 @@
                                     <span class="md:hidden text-blue-600 font-bold">17.30</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-blue-600 font-bold text-center">17.30</td>
-                                <td class="md:table-cell p-0 py-1 md:p-5 font-semibold text-blue-600">
+                                <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-blue-600">
                                     <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>공포
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
@@ -80,11 +80,11 @@
 
                             <tr class="flex flex-col md:table-row px-2 py-5 md:p-0 border-b md:border-none">
                                 <td class="md:table-cell p-0 md:p-5 font-bold text-slate-800 dark:text-white flex justify-between items-center">
-                                    <span>5. 풋콜 비율</span>
+                                    <span class="break-keep">5. 풋콜 비율</span>
                                     <span class="md:hidden text-blue-800 font-bold">0</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-blue-800 font-bold text-center">0</td>
-                                <td class="md:table-cell p-0 py-1 md:p-5 font-semibold text-blue-800">
+                                <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-blue-800">
                                     <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>극심한 공포
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
