--- a/public/index.html
+++ b/public/index.html
@@ -166,16 +166,16 @@
 <span id="score" class="text-5xl font-black text-primary"></span>
 <span id="status" class="text-2xl font-bold tracking-tight text-primary">GREED</span>
 </div>
-<div class="mt-10 flex flex-wrap w-full justify-between px-4 gap-3">
-<div class="flex flex-col items-left md:items-center gap-1">
+<div class="mt-10 flex flex-wrap w-full justify-between px-4 gap-4">
+<div class="flex flex-col items-center md:items-center gap-1">
 <span class="h-1.5 w-12 rounded-full bg-red-400"></span>
 <span class="text-[10px] font-bold text-[#49699c] uppercase">Extreme Fear</span>
 </div>
-<div class="flex flex-col items-left md:items-center gap-1">
+<div class="flex flex-col items-center md:items-center gap-1">
 <span class="h-1.5 w-12 rounded-full bg-yellow-400"></span>
 <span class="text-[10px] font-bold text-[#49699c] uppercase">Neutral</span>
 </div>
-<div class="flex flex-col items-left md:items-center gap-1">
+<div class="flex flex-col items-center md:items-center gap-1">
 <span class="h-1.5 w-12 rounded-full bg-primary"></span>
 <span class="text-[10px] font-bold text-[#49699c] uppercase">Extreme Greed</span>
 </div>
