--- a/public/gemini_adv.html
+++ b/public/gemini_adv.html
@@ -24,7 +24,7 @@
                         <tbody class="divide-y divide-slate-100">
                             <tr class="flex flex-col md:table-row px-2 py-5 md:p-0 border-b md:border-none">
                                 <td class="md:table-cell p-0 md:p-5 font-bold text-slate-800 dark:text-white flex justify-between items-center">
-                                    <span>1. 이격도</span>
+                                    <span class="dark:text-white">1. 이격도</span>
                                     <span class="md:hidden text-red-600 font-bold">100.00</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-red-600 font-bold text-center">100.00</td>
@@ -38,7 +38,7 @@
 
                             <tr class="flex flex-col md:table-row px-2 py-5 md:p-0 border-b md:border-none">
                                 <td class="md:table-cell p-0 md:p-5 font-bold text-slate-800 dark:text-white flex justify-between items-center">
-                                    <span>2. RSI</span>
+                                    <span class="dark:text-white">2. RSI</span>
                                     <span class="md:hidden text-red-600 font-bold">91.54</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-red-600 font-bold text-center">91.54</td>
@@ -52,7 +52,7 @@
 
                             <tr class="flex flex-col md:table-row px-2 py-5 md:p-0 border-b md:border-none">
                                 <td class="md:table-cell p-0 md:p-5 font-bold text-slate-800 dark:text-white flex justify-between items-center">
-                                    <span>3. ADR</span>
+                                    <span class="dark:text-white">3. ADR</span>
                                     <span class="md:hidden text-blue-600 font-bold">60.00</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-blue-600 font-bold text-center">60.00</td>
@@ -66,7 +66,7 @@
 
                             <tr class="flex flex-col md:table-row px-2 py-5 md:p-0 border-b md:border-none">
                                 <td class="md:table-cell p-0 md:p-5 font-bold text-slate-800 dark:text-white flex justify-between items-center">
-                                    <span>4. VKOSPI</span>
+                                    <span class="dark:text-white">4. VKOSPI</span>
                                     <span class="md:hidden text-blue-600 font-bold">17.30</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-blue-600 font-bold text-center">17.30</td>
@@ -80,7 +80,7 @@
 
                             <tr class="flex flex-col md:table-row px-2 py-5 md:p-0 border-b md:border-none">
                                 <td class="md:table-cell p-0 md:p-5 font-bold text-slate-800 dark:text-white flex justify-between items-center">
-                                    <span class="break-keep">5. 풋콜 비율</span>
+                                    <span class="dark:text-white break-keep">5. 풋콜 비율</span>
                                     <span class="md:hidden text-blue-800 font-bold">0</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-blue-800 font-bold text-center">0</td>
