--- a/public/gemini_adv.html
+++ b/public/gemini_adv.html
@@ -1,15 +1,14 @@
         <div class="px-2 py-8 md:px-8 bg-slate-900 text-white">
-            <h1 class="text-2xl md:text-3xl text-white font-bold mb-4">KOSPI 5135.18 장세 종합 보고서</h1>
+            <h1 class="text-2xl md:text-3xl text-white font-bold mb-4">KOSPI 5146.24 장세 종합 보고서</h1>
             <p class="text-slate-300 leading-relaxed text-lg">
-                코스피 5,100선 돌파라니, 정말 유례없는 강세장이 이어지고 있네요! 어제보다 더 오른 5135.18이라니 투자자로서 기쁘기도 하겠지만, 지표들이 보내는 신호는 어제보다 훨씬 더 날카로워졌습니다. 
-특히 **5번 풋콜 비율 점수가 '0'**이 되었다는 점은 시장 분석가로서 매우 긴장하며 보게 되는 대목입니다. 친근하지만 아주 냉철하게, 오늘의 시장 상황을 짚어드릴게요.<br/>
-<span class="text-xs text-white/70 mt-2">업데이트: 2026. 01. 28. 오후 03:06</span>
+                코스피 5,146선에서 살짝 숨 고르기에 들어갔군요. 수치상으로는 소폭 하락이지만, 보내주신 지표들을 뜯어보면 지금 시장은 **"취기가 잔뜩 오른 파티장"**과 같습니다. 종합 지수 62점이라는 '적당한 탐욕' 뒤에 숨겨진 아주 날카로운 신호들을 짚어드릴게요.<br/>
+<span class="text-xs text-white/70 mt-2">업데이트: 2026. 01. 29. 오전 10:58</span>
             </p>
         </div>
 
         <div class="px-0 py-8 space-y-12 md:px-4">
             <section>
-                <h2 class="text-xl font-bold mb-6 text-slate-900 border-l-4 border-slate-900 pl-4 dark:text-white">현 시장 심리 스캔: 폭주하는 기관차와 사라진 브레이크</h2>
+                <h2 class="text-xl font-bold mb-6 text-slate-900 border-l-4 border-slate-900 pl-4 dark:text-white">현 시장 심리 스캔: 뜨거운 열기와 차가운 소외</h2>
                 <div class="overflow-x-auto">
                     <table class="w-full text-left border-collapse border-t border-slate-200">
                         <thead class="hidden md:table-header-group">
@@ -39,14 +38,14 @@
                             <tr class="flex flex-col md:table-row px-2 py-5 md:p-0 border-b md:border-none">
                                 <td class="md:table-cell p-0 md:p-5 font-bold text-slate-800 dark:text-white flex justify-between items-center">
                                     <span class="dark:text-white">2. RSI</span>
-                                    <span class="md:hidden text-red-600 font-bold">91.54</span>
+                                    <span class="md:hidden text-red-600 font-bold">88.64</span>
                                 </td>
-                                <td class="hidden md:table-cell p-5 text-red-600 font-bold text-center">91.54</td>
+                                <td class="hidden md:table-cell p-5 text-red-600 font-bold text-center">88.64</td>
                                 <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-red-600">
                                     <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>극심한 탐욕
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
-                                    어제(90.90)보다 더 올랐습니다. 주가 상승 속도가 비정상적으로 빠르며, 과열권의 끝자락에 와 있습니다.
+                                    주가 상승 속도가 비정상적으로 빠릅니다. "묻지마 매수"가 들어오고 있다는 강력한 증거입니다.
                                 </td>
                             </tr>
 
@@ -60,35 +59,35 @@
                                     <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>공포/소외
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
-                                    중요! 지수는 오르는데 상승 종목 수는 여전히 적습니다. 대형주 몇 개가 지수를 견인하는 '질 낮은 상승'이 지속되고 있습니다.
+                                    중요! 지수는 고점 부근인데, 상승 종목 수는 오히려 적습니다. 대형주 몇 개만 오르고 나머지는 하락하는 '쏠림'이 심각합니다.
                                 </td>
                             </tr>
 
                             <tr class="flex flex-col md:table-row px-2 py-5 md:p-0 border-b md:border-none">
                                 <td class="md:table-cell p-0 md:p-5 font-bold text-slate-800 dark:text-white flex justify-between items-center">
                                     <span class="dark:text-white">4. VKOSPI</span>
-                                    <span class="md:hidden text-blue-600 font-bold">17.30</span>
+                                    <span class="md:hidden text-blue-600 font-bold">4.40</span>
                                 </td>
-                                <td class="hidden md:table-cell p-5 text-blue-600 font-bold text-center">17.30</td>
+                                <td class="hidden md:table-cell p-5 text-blue-600 font-bold text-center">4.40</td>
                                 <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-blue-600">
-                                    <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>공포
+                                    <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>극단적 공포
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
-                                    변동성 지수가 더 높아졌습니다. 주가가 오르는데도 시장 참여자들의 불안감은 어제보다 더 커졌음을 의미합니다.
+                                    주의! 변동성 지수 스케일링이 4.40이라는 것은 실제 변동성이 38%를 넘겼다는 뜻입니다. 투자자들이 극도로 불안해하고 있습니다.
                                 </td>
                             </tr>
 
                             <tr class="flex flex-col md:table-row px-2 py-5 md:p-0 border-b md:border-none">
                                 <td class="md:table-cell p-0 md:p-5 font-bold text-slate-800 dark:text-white flex justify-between items-center">
                                     <span class="dark:text-white break-keep">5. 풋콜 비율</span>
-                                    <span class="md:hidden text-blue-800 font-bold">0</span>
+                                    <span class="md:hidden text-blue-800 font-bold">48.96</span>
                                 </td>
                                 <td class="hidden md:table-cell p-5 text-blue-800 font-bold text-center">0</td>
                                 <td class="md:table-cell p-0 py-1 md:p-2 font-semibold text-blue-800">
-                                    <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>극심한 공포
+                                    <span class="md:hidden text-xs text-slate-400 mr-2">상태:</span>중립/공포
                                 </td>
                                 <td class="md:table-cell p-0 pt-2 md:p-5 text-slate-600 leading-relaxed text-sm dark:text-white border-t border-slate-100 md:border-none mt-2 md:mt-0">
-                                    비상 상황! 스케일링 점수가 0점이라는 것은 PCR 값이 180%를 넘어섰다는 뜻입니다. 하락 베팅(풋옵션)이 시장을 완전히 장악했습니다.
+                                    하락 베팅이 서서히 힘을 얻고 있습니다.
                                 </td>
                             </tr>
                         </tbody>
@@ -97,37 +96,37 @@
             </section>
 
             <section class="space-y-6">
-                <h2 class="text-xl font-bold text-slate-900 border-l-4 border-slate-900 pl-4 dark:text-white">전문적인 종합 분석: 붕괴를 대비하는 스마트 머니</h2>
+                <h2 class="text-xl font-bold text-slate-900 border-l-4 border-slate-900 pl-4 dark:text-white">전문적인 종합 분석: 분노의 질주, 그런데 브레이크에 발을 올린...</h2>
                 <div class="bg-slate-50 px-2 py-6 md:px-6 rounded-lg space-y-4 text-slate-700">
-                    <p>오늘의 장세는 전형적인 <strong>'라스트 스퍼트(Last Spurt)'</strong> 혹은 **'불 트랩(Bull Trap)'**의 위험을 내포하고 있습니다.</p>
+                    <p>현재 지수는 62점(Greed, 탐욕) 구간에 진입했습니다. 하지만 이 점수는 지표 간의 극심한 불균형이 만들어낸 '불안한 숫자'입니다.</p>
                     <ul class="list-none space-y-4">
                         <li class="pl-4 border-l-2 border-slate-300">
-                            <strong>풋콜 비율 0점의 공포:</strong> 지수가 오늘도 올랐음에도 풋콜 비율 점수가 0점이 나왔다는 것은, 기관과 외국인이 **"이제는 진짜 터질 때가 됐다"**고 판단하여 하락 베팅(풋옵션) 물량을 역사적 극단까지 채웠다는 뜻입니다. 지수는 웃고 있지만 파생 시장은 비명을 지르고 있는 형국입니다.
+                            <strong>지수만 오르는 착시 (ADR 60):</strong> 지수가 5,146이라는 높은 위치에 있음에도 ADR 점수가 60점이라는 것은, 시가총액 상위 몇몇 종목이 지수를 억지로 지탱하고 있다는 뜻입니다. 내 종목은 안 오르는데 지수만 가는 '박탈감 장세'의 전형입니다.
                         </li>
                         <li class="pl-4 border-l-2 border-slate-300">
-                            <strong>ADR과의 괴리 지속:</strong> 지수가 5,100을 넘겼음에도 ADR 점수가 60점에 머물고 있습니다. 이는 소외된 종목들이 속출하고 있다는 뜻이며, 대형주의 힘이 빠지는 순간 시장 전체가 급격히 무너질 수 있는 취약한 구조입니다.
+                            <strong>비명이 들리는 상승 (VKOSPI 4.40 & PCR 48.96):</strong> 주가가 조금만 흔들려도 변동성 점수가 바닥(공포 극단)으로 떨어졌습니다. 이는 투자자들이 심리적으로 매우 취약해져 있으며, 작은 악재에도 투매가 나올 수 있는 '살얼음판' 같은 상태임을 보여줍니다.
                         </li>
                         <li class="pl-4 border-l-2 border-slate-300">
-                            <strong>RSI 91.54의 경고:</strong> 기술적으로 RSI가 90을 넘어서는 구간은 '신의 영역'이라 부릅니다. 언제 급락이 나와도 이상하지 않은, 통계적으로 매우 희귀한 과열 상태입니다.
+                            <strong>기술적 한계치 (이격도 100 & RSI 88.64):</strong> 가격 지표는 여전히 "더 가고 싶다"고 외치지만, 이는 사실상 에너지를 쥐어짜는 구간입니다. 여기서 더 오르더라도 그것은 '보유자의 영역'이지, 신규 진입자가 취할 수 있는 손익비는 최악입니다.
                         </li>
                     </ul>
                 </div>
             </section>
 
             <section class="bg-slate-900 text-white px-2 py-8 md:px-8 rounded-xl shadow-inner">
-                    <h2 class="text-xl font-bold mb-6 border-b border-slate-700 pb-2">세심한 조언: 지금은 수익에 취해 있을 때가 아니라, 언제든 짐을 싸서 나갈 준비를 해야 하는 시점입니다.</h2>
+                    <h2 class="text-xl font-bold mb-6 border-b border-slate-700 pb-2">세심한 조언: 수익은 챙기고, 도망칠 문 옆에 서 계세요</h2>
                     <div class="grid md:grid-cols-3 gap-6 text-sm text-slate-300">
                         <div>
-                            <h4 class="text-white font-bold mb-2">첫째, 현금화 비중을 급격히 높이세요.</h4>
-                            <p class="text-white">풋콜 비율 0점은 시장의 '보험' 수요가 폭발했다는 신호입니다. 여러분도 보험(현금)을 챙기셔야 합니다.</p>
+                            <h4 class="text-white font-bold mb-2">첫째, 신규 매수는 금지입니다.</h4>
+                            <p class="text-white">RSI 88점대에서 추격 매수하는 것은 달리는 호랑이 등에 타는 격입니다. 지금은 현금을 아끼고 관망하며 다음 기회를 기다려야 합니다.</p>
                         </div>
                         <div>
-                            <h4 class="text-white font-bold mb-2">둘째, '절대 매도 기준'을 지키세요.</h4>
-                            <p class="text-white">오늘 종가 혹은 본인의 익절 라인을 1%라도 건드리면 미련 없이 던져야 합니다. 현재 지표상 하락이 시작되면 '투매'가 나올 가능성이 매우 높습니다.</p>
+                            <h4 class="text-white font-bold mb-2">둘째, '익절가(Trailing Stop)'를 꼭 설정하세요.</h4>
+                            <p class="text-white">오늘 종가 기준으로 -3~5% 정도 하락하면 미련 없이 수익을 실현하겠다는 기준을 세우세요. 변동성 점수(4.40)가 저렇게 낮다는 건, 하락이 시작되면 변동성이 폭발하며 급락할 수 있다는 경고니까요.</p>
                         </div>
                         <div>
-                            <h4 class="text-white font-bold mb-2">셋째, 신규 진입은 독약입니다.</h4>
-                            <p class="text-white">지금 들어가는 것은 남들이 다 먹고 남은 설거지 거리를 떠안는 것과 같습니다. 지수가 5,200, 5,300을 가더라도 지금은 내 것이 아니라고 생각하시는 게 자산을 지키는 길입니다.</p>
+                            <h4 class="text-white font-bold mb-2">셋째, 소외된 종목에 주목하세요.</h4>
+                            <p class="text-white">ADR이 낮다는 건 순환매가 아직 돌지 않았다는 뜻입니다. 대형주가 쉴 때 뒤늦게 오를 수 있는 실적 중심의 중소형주로 포트폴리오를 압축하거나, 현금 비중을 높여 폭풍우를 피하는 것이 현명합니다.</p>
                         </div>
                     </div>
                 </section>
