--- a/public/index.html
+++ b/public/index.html
@@ -381,11 +381,11 @@
 
         // Define indicator names
         const indicatorNames = {
-            1: "시장의 모멘텀",
-            2: "주가 강도",
-            3: "시장의 폭",
-            4: "시장 변동성",
-            5: "옵션 풋콜 비율"
+            1: "시장의 모멘텀(125D TDI)",
+            2: "주가 강도(RSI)",
+            3: "시장의 폭(ADR)",
+            4: "시장 변동성(VKOSPI)",
+            5: "옵션 풋콜 비율(PCR)"
         };
 
         // Function to update gauge needle rotation and sentiment text/color
