--- a/public/gemini_adv.html
+++ b/public/gemini_adv.html
@@ -1,4 +1,6 @@
-        <div class="px-2 py-8 md:px-8 bg-slate-900 text-white">
+<!-- 초기 디자인 20260129 -->
+
+<div class="px-2 py-8 md:px-8 bg-slate-900 text-white">
             <h1 class="text-2xl md:text-3xl text-white font-bold mb-4">KOSPI 5146.24 장세 종합 보고서</h1>
             <p class="text-slate-300 leading-relaxed text-lg">
                 코스피 5,146선에서 살짝 숨 고르기에 들어갔군요. 수치상으로는 소폭 하락이지만, 보내주신 지표들을 뜯어보면 지금 시장은 **"취기가 잔뜩 오른 파티장"**과 같습니다. 종합 지수 62점이라는 '적당한 탐욕' 뒤에 숨겨진 아주 날카로운 신호들을 짚어드릴게요.<br/>
